--- a/views/pages/paginadeperfil.ejs
+++ b/views/pages/paginadeperfil.ejs
@@ -1,11 +1,73 @@
 <div id="paginadeperfil" v-cloak>
   <div class="container">
-     <div class="col"> 
-       <div class="row">Nome: {{me.fullName}}</div>
-       <div class="row">Email: {{me.emailAddress}}</div>
-       <div class="row">Perfil: {{me.perfil}}</div>
-     </div>
-    <div v-if="me.perfil === 'professor'"><button  type="button" class="btn btn-primary">Criar turma</button></div>
+    <h1>Minha conta</h1>
+    <hr/>
+     <div class="row mb-3">
+      <div class="col-sm-6">
+        <h4>Informações pessoais</h4>
+      </div>
+      <div class="col-sm-6">
+        <span class="float-sm-right">
+          <a class="btn btn-sm btn-outline-info account-settings-button" href="/account/profile">Editar perfil</a>
+        </span>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-3">Nome:</div>
+      <div class="col"><strong>{{me.fullName}}</strong></div>
+    </div>
+    <div class="row">
+      <div class="col-3">Email:</div>
+      <div class="col">
+        <strong :class="[me.emailStatus === 'unconfirmed' || me.emailStatus === 'changeRequested' ? 'text-muted' : '']">{{me.emailChangeCandidate ? me.emailChangeCandidate : me.emailAddress}}</strong>
+        <span v-if="me.emailStatus === 'unconfirmed' || me.emailStatus === 'changeRequested'" class="badge badge-pill badge-warning">Unverified</span>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-3">Perfil:</div>
+      <div class="col"><strong>{{me.perfil}}</strong></div>
+    </div>
+    <hr/>
+    <div class="row mb-3">
+      <div class="col-sm-6">
+        <h4>Senha</h4>
+      </div>
+      <div class="col-sm-6">
+        <span class="float-sm-right">
+          <a class="btn btn-sm btn-outline-info account-settings-button" href="/account/password">Mudar senha</a>
+        </span>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-3">Senha:</div>
+      <div class="col"><strong>••••••••••</strong></div>
+    </div>
+    <hr/>
+    <!--TURMAS EM QUE O USUÁRIO ESTÁ APARECERIAM AQUI-->
+    <div class="row mb-3">
+      <div class="col-sm-6">
+        <h4>Turmas</h4>
+      </div>
+      <!--SE ESTIVER COM O PERFIL DE PROFESSOR, MOSTRA A OPÇÃO DE CRIAR TURMA-->
+      <div v-if="me.perfil === 'professor'" class="float-sm-right col-sm-6">
+        <span class="float-sm-right">
+          <a class="btn btn-sm btn-outline-info account-settings-button" href="#">Criar turma</a>
+        </span>
+      </div>
+    </div>
+    <div class="row mb-3">
+          <div class="card mr-3">
+            <div class="card-header text-center">Nome da turma</div>
+            <div class="card-body text-center">Descrição</div>
+            <!--<div class="card-footer">Footer</div>-->
+          </div>
+          <div class="card mr-3">
+            <div class="card-header text-center">Nome da turma</div>
+            <div class="card-body text-center">Descrição</div>
+            <!--<div class="card-footer">Footer</div>-->
+          </div>
+    </div>
+    
   </div>
 </div>
 <%- /* Expose server-rendered data as window.SAILS_LOCALS :: */ exposeLocalsToBrowser() %>
