--- a/views/pages/homepage.ejs
+++ b/views/pages/homepage.ejs
@@ -105,6 +105,7 @@ stripeSecret: 'sk_test_Zzd814nldl91104qor5911gjald'</code></pre>
       <h3>Let's get to work.</h3>
       <p>We think this project is a pretty convenient starting point, but of course there's no one-size-fits-all solution. The good news is, this app is in your hands now, so you can jump into the files and adapt it to your needs. Change some code around. Break stuff.  Fix it. And above all: <strong>make something people want to use</strong>.</p>
       <p><span class="text-muted">&hearts;</span> <a href="https://sailsjs.com/about">The Sails Team</a></p>
+      <p> <a href="/tabelasgdd"> Tabela com as disciplinas para o ensino fundamental </a> </p>
     </div>
   </div>
 </div>
