--- a/views/pages/entrance/login.ejs
+++ b/views/pages/entrance/login.ejs
@@ -1,3 +1,32 @@
+<html>
+  <meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="css/main.css" />
+  <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  
+  <body>
+    <header id="header">
+				
+				<nav>
+					<a href="#menu">Menu</a>
+				</nav>
+			</header>
+    	<!-- Nav -->
+    
+			<nav id="menu">
+				<ul class="links">
+					<li><a href="index.html">Home</a></li>
+					<li><a href="cadastrar.html">Cadastro</a></li>
+				</ul>
+			</nav>
+
 <div id="login" v-cloak>
   <div class="container">
     <h1 class="text-center">Entre com sua conta</h1>
@@ -37,3 +66,14 @@
   </div>
 </div>
 <%- /* Expose locals as `window.SAILS_LOCALS` :: */ exposeLocalsToBrowser() %>
+
+ <script src="js/jquery.min.js"></script>
+			<script src="js/jquery.scrolly.min.js"></script>
+			<script src="js/skel.min.js"></script>
+			<script src="js/util.js"></script>
+			<script src="js/main.js"></script>
+
+  </body>
+  			
+</html>
+
