Links conectando algumas paginas no menu em login e signup

--- a/views/pages/entrance/login.ejs
+++ b/views/pages/entrance/login.ejs
@@ -20,10 +20,12 @@
 			</header>
     	<!-- Nav -->
     
-			<nav id="menu">
+  <nav id="menu">
 				<ul class="links">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="cadastrar.html">Cadastro</a></li>
+					<li><a href="index.html">Início</a></li>
+					<li><a href="../sobre.ejs">Sobre</a></li>
+          <li><a href="login.ejs">Entrar</a></li>
+          <li><a href="signup.ejs">Criar conta</a></li>
 				</ul>
 			</nav>
 
