--- a/views/pages/entrance/signup.ejs
+++ b/views/pages/entrance/signup.ejs
@@ -21,11 +21,13 @@
   <!-- Nav -->
 
   <nav id="menu">
-    <ul class="links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="cadastrar.html">Cadastro</a></li>
-    </ul>
-  </nav>
+				<ul class="links">
+					<li><a href="index.html">Início</a></li>
+					<li><a href="../sobre.ejs">Sobre</a></li>
+          <li><a href="login.ejs">Entrar</a></li>
+          <li><a href="signup.ejs">Criar conta</a></li>
+				</ul>
+			</nav>
 
   <div id="signup" v-cloak>
     <div class="container" v-if="!cloudSuccess">
