--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -41,7 +41,7 @@
             </div>
           </div>
           <!-- Only in mobile nav -->
-          <a class="nav-item nav-link ml-2 mr-2 d-block d-sm-none" href="/account">Configurações da conta</a>
+          <a class="nav-item nav-link ml-2 mr-2 d-block d-sm-none" href="/account">Configurações</a>
           <a class="nav-item nav-link ml-2 mr-2 d-block d-sm-none" href="/logout">Sair</a>
           <% } else { %>
           <!-- LOGGED-OUT NAVIGATION -->
@@ -52,7 +52,7 @@
             <a class="btn btn-outline-info" href="/signup">Cadastrar</a>
           </div>
           <!-- Only in mobile nav -->
-          <a class="nav-item nav-link text-info ml-2 d-block d-md-none" href="/signup">Entrar</a>
+          <a class="nav-item nav-link text-info ml-2 d-block d-md-none" href="/signup">Cadastrar</a>
           <% } %>
         </div>
       </header>
@@ -137,6 +137,7 @@
     <script src="/js/pages/paginadeperfil.page.js"></script>
     <script src="/js/pages/sgddedu/editor.page.js"></script>
     <script src="/js/pages/sobre.page.js"></script>
+    <script src="/js/pages/turmas.page.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
