--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -31,6 +31,8 @@
         <div class="navbar-nav flex-row">
           <!-- LOGGED-IN NAVIGATION -->
           <% if(me) { %>
+          <a class="nav-item nav-link ml-2 ml-md-0 mr-2 mr-md-0" href="/Turmas">Turmas</a>
+          <a class="nav-item nav-link ml-2 ml-md-0 mr-2 mr-md-0" href="/#">Biblioteca</a>
           <a class="nav-item nav-link ml-2 ml-md-0 mr-2 mr-md-0" href="/contact">Ajuda</a>
           <!-- Only in desktop nav -->
           <div class="nav-item dropdown d-none d-sm-block">
@@ -136,6 +138,7 @@
     <script src="/js/pages/legal/terms.page.js"></script>
     <script src="/js/pages/sgddedu/editor.page.js"></script>
     <script src="/js/pages/sobre.page.js"></script>
+    <script src="/js/pages/Turmas.page.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
