--- a/views/pages/turmas.ejs
+++ b/views/pages/turmas.ejs
@@ -7,8 +7,9 @@
       <div title="Turmas em que você está" class="col-sm-6">
         <h4>Minhas Turmas</h4>
       </div>
-      <!--SE ESTIVER COM O PERFIL DE PROFESSOR, MOSTRA A OPÇÃO DE CRIAR TURMA-->
-      <div v-if="me.perfil === 'professor'" class="col-sm-6">
+      <!--SE ESTIVER COM O PERFIL DE PROFESSOR, MOSTRA A OPÇÃO DE CRIAR TURMA
+      <div v-if="me.perfil === 'professor'" class="col-sm-6">-->
+      <div class="col-sm-6">
         <a class="btn btn-sm btn-outline-info account-settings-button" href="#">Criar turma</a>
       </div>
     </div>
