--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -104,15 +104,14 @@
           <a href="#">Link 2</a>
           <a href="#">Link 3</a>
         </div>
+        <button class="dropdown-btn">
           <% }%>
           <% if(me.perfil === "desenvolvedor"){ %>
-          Minhas contribuições
+          Contribuições
           <i class="fa fa-caret-down"></i>
         </button>
-        <div class="dropdown-container">
-          <a href="#">Link 1</a>
-          <a href="#">Link 2</a>
-          <a href="#">Link 3</a>
+        <div class="dropdown-container" >
+          <a v-for="Devjogo in Devjogos" href="#">{{ Devjogo.nome }}</a>
         </div>
         <% }%>
       </div>
@@ -161,16 +160,16 @@
       var i;
 
       for (i = 0; i < dropdown.length; i++) {
-  dropdown[i].addEventListener("click", function() {
-    this.classList.toggle("active");
-    var dropdownContent = this.nextElementSibling;
-    if (dropdownContent.style.display === "block") {
-      dropdownContent.style.display = "none";
-    } else {
-      dropdownContent.style.display = "block";
-    }
-  });
-}
+        dropdown[i].addEventListener("click", function() {
+          this.classList.toggle("active");
+          var dropdownContent = this.nextElementSibling;
+          if (dropdownContent.style.display === "block") {
+            dropdownContent.style.display = "none";
+          } else {
+            dropdownContent.style.display = "block";
+          }
+        });
+      }
     </script>
     <% /* Load Stripe Checkout */ %>
     <script src="https://checkout.stripe.com/checkout.js"></script>
