--- a/views/pages/iniciodesenvolvedor.ejs
+++ b/views/pages/iniciodesenvolvedor.ejs
@@ -1,18 +1,19 @@
 <div id="iniciodesenvolvedor" v-cloak>
 
-  <h1>Início.</h1>
-  
+  <h1>Início</h1>
+  <hr/>
   <div class="container">
     <div class="row">
       <div class="col-md-1">
         <strong>Meus Jogos</strong>
-     
       </div>
+      
       <div class="col-md-2">
         <button type="button" class="btn btn-primary">Enviar jogo</button>
       </div>
+      
       <div class="col-md-3">
-          <strong> Estatísticas</strong> 
+          <strong>Estatísticas</strong> 
       </div>
     </div>
   </div>
