--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -67,7 +67,7 @@
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-container">
-          <a v-for="Userturma_adm in Userturma_adms" href="#">{{ Userturma_adm.descricao }}</a>
+         <!-- <%- include('../pages/lista-turma.ejs') %>-->
         </div>
         <button class="dropdown-btn">
           <% if(me.perfil === "usuario"){ %>
@@ -186,6 +186,7 @@
     <script src="/js/pages/homepage.page.js"></script>
     <script src="/js/pages/legal/privacy.page.js"></script>
     <script src="/js/pages/legal/terms.page.js"></script>
+    <script src="/js/pages/lista-turma.page.js"></script>
     <script src="/js/pages/paginadeperfil.page.js"></script>
     <script src="/js/pages/sgddedu/editor.page.js"></script>
     <script src="/js/pages/sobre.page.js"></script>
