--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -132,6 +132,7 @@
     <script src="/js/pages/entrance/signup.page.js"></script>
     <script src="/js/pages/faq.page.js"></script>
     <script src="/js/pages/homepage.page.js"></script>
+    <script src="/js/pages/homepageusuario.page.js"></script>
     <script src="/js/pages/legal/privacy.page.js"></script>
     <script src="/js/pages/legal/terms.page.js"></script>
     <script src="/js/pages/sgddedu/editor.page.js"></script>
