--- a/assets/styles/importer.less
+++ b/assets/styles/importer.less
@@ -38,3 +38,4 @@
 @import 'pages/sobre.less';
 @import 'pages/sgddedu/editor.less';
 @import 'pages/homepageusuario.less';
+@import 'pages/game.less';
