--- a/views/pages/turmas.ejs
+++ b/views/pages/turmas.ejs
@@ -27,6 +27,13 @@
       </div>
     </div>
   </div>
+  <!--ADICIONA O USUÁRIO A TURMA (TESTE)-->
+  <form action="actionsturma/turmascontroller" method="post">
+    userid: <input type="text" name="userid"><br>
+    turmaid:<input type="text" name="turmaid"><br>
+<!--     <input type="hidden" name="_csrf" value="<%= _csrf %>"> -->
+    <input type="submit" value="submit">
+  </form>
 </div>
 <%- /* Expose server-rendered data as window.SAILS_LOCALS :: */ exposeLocalsToBrowser() %>
 
