--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -133,6 +133,7 @@
     <script src="/js/pages/entrance/new-password.page.js"></script>
     <script src="/js/pages/entrance/signup.page.js"></script>
     <script src="/js/pages/faq.page.js"></script>
+    <script src="/js/pages/game.page.js"></script>
     <script src="/js/pages/homepage.page.js"></script>
     <script src="/js/pages/homepageusuario.page.js"></script>
     <script src="/js/pages/iniciodesenvolvedor.page.js"></script>
