--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -139,6 +139,7 @@
     <script src="/js/pages/iniciodesenvolvedor.page.js"></script>
     <script src="/js/pages/legal/privacy.page.js"></script>
     <script src="/js/pages/legal/terms.page.js"></script>
+    <script src="/js/pages/listargames.page.js"></script>
     <script src="/js/pages/paginadeperfil.page.js"></script>
     <script src="/js/pages/sgddedu/editor.page.js"></script>
     <script src="/js/pages/sobre.page.js"></script>
