--- a/views/pages/listargames.ejs
+++ b/views/pages/listargames.ejs
@@ -7,8 +7,36 @@
     <div class="col-sm-3">
       <div class="card m-4">JOGO</div>      
     </div>
-    <div class="col-sm-7">
-      <h5>Nome do jogo</h5>
+    <div class="col-sm-7"><br>
+      <h5><b>Nome:</b></h5>
+      <p><b>Descrição: <br>
+      Disciplina: <br>
+      Série:<br>
+      Conteúdo: </b></p>
+    </div>
+  </div>
+  <div class=row>
+    <div class="col-sm-3">
+      <div class="card m-4">JOGO</div>      
+    </div>
+    <div class="col-sm-7"><br>
+      <h5><b>Nome:</b></h5>
+      <p><b>Descrição: <br>
+      Disciplina: <br>
+      Série:<br>
+      Conteúdo: </b></p>
+    </div>
+  </div>
+  <div class=row>
+    <div class="col-sm-3">
+      <div class="card m-4">JOGO</div>      
+    </div>
+    <div class="col-sm-7"><br>
+      <h5><b>Nome:</b></h5>
+      <p><b>Descrição: <br>
+      Disciplina: <br>
+      Série:<br>
+      Conteúdo: </b></p>
     </div>
   </div>
 </div>
