--- a/views/pages/listargames.ejs
+++ b/views/pages/listargames.ejs
@@ -4,10 +4,42 @@
     <hr></hr><br>
   </div>
   <div class=row>
-    <div class="col-sm-3">
+    <div class="col-sm-2">
+      <div class="card m-3">JOGO</div>      
+    </div>
+    <div class="col-sm-3"><br>
+      <h5><b>Nome:</b></h5>
+      <p><b>Descrição: <br>
+      Disciplina: <br>
+      Série:<br>
+      Conteúdo: </b></p>
+    </div>
+    <div class="col-sm-2">
+        <div class="card m-3">JOGO</div>      
+      </div>
+      <div class="col-sm-3"><br>
+        <h5><b>Nome:</b></h5>
+        <p><b>Descrição: <br>
+        Disciplina: <br>
+        Série:<br>
+        Conteúdo: </b></p>
+      </div>
+  </div>
+  <div class=row>
+    <div class="col-sm-2">
       <div class="card m-4">JOGO</div>      
     </div>
-    <div class="col-sm-7"><br>
+    <div class="col-sm-3"><br>
+      <h5><b>Nome:</b></h5>
+      <p><b>Descrição: <br>
+      Disciplina: <br>
+      Série:<br>
+      Conteúdo: </b></p>
+    </div>
+    <div class="col-sm-2">
+      <div class="card m-4">JOGO</div>      
+    </div>
+    <div class="col-sm-3"><br>
       <h5><b>Nome:</b></h5>
       <p><b>Descrição: <br>
       Disciplina: <br>
@@ -16,22 +48,20 @@
     </div>
   </div>
   <div class=row>
-    <div class="col-sm-3">
+    <div class="col-sm-2">
       <div class="card m-4">JOGO</div>      
     </div>
-    <div class="col-sm-7"><br>
+    <div class="col-sm-3"><br>
       <h5><b>Nome:</b></h5>
       <p><b>Descrição: <br>
       Disciplina: <br>
       Série:<br>
       Conteúdo: </b></p>
     </div>
-  </div>
-  <div class=row>
-    <div class="col-sm-3">
+    <div class="col-sm-2">
       <div class="card m-4">JOGO</div>      
     </div>
-    <div class="col-sm-7"><br>
+    <div class="col-sm-3"><br>
       <h5><b>Nome:</b></h5>
       <p><b>Descrição: <br>
       Disciplina: <br>
