--- a/views/pages/turmas.ejs
+++ b/views/pages/turmas.ejs
@@ -1,4 +1,4 @@
-<div id="turmas" v-cloak>
+<div id="turmas" class="col-md-10 offset-md-2" v-cloak>
   <div class="container">
       <h1>Turmas</h1>
     <hr/>
@@ -11,32 +11,34 @@
       <div class="col-sm-6">
         <button type="button" class="btn btn-sm btn-outline-info" data-toggle="modal" data-target="#modal" href="#">Criar turma</button>
         <!-- Modal -->
-<div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="modalTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="modalTitle">Criar turma</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
+      <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="modalTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="modalTitle">Criar turma</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <form action="turmas" method="POST">
+                Nome: <input type="textarea" name="nome"></input><br>
+                <input type="hidden" name="admin" value="<%= me.id %>" style="display: none"></input>
+                Descrição: <input type="textarea" name="descricao"></input><br>
+                Código: <input type="textarea" name="codigo"></input><br>
+                <!-- ** LEMBRETE ** 
+                Gerar codigo automaticamente -->
+                <input type="hidden" name="_csrf" value="<%- _csrf %>" />
+                <button type="submit" onclick="" class="btn btn-primary">Save changes</button>
+              </form>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="modal-body">
-        <form action="turma/create">
-          <input type="textarea" v-model="nome">
-          <input type="textarea" id="<%= id %>" style="display: none">
-          <input type="textarea" v-model="descricao">
-          <input type="textarea" v-model="codigo">
-          <!-- ** LEMBRETE ** 
-          Gerar codigo automaticamente -->
-        </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div>
       </div>
 
     </div>
