--- a/views/pages/turmas.ejs
+++ b/views/pages/turmas.ejs
@@ -28,10 +28,11 @@
     </div>
   </div>
   <!--ADICIONA O USUÁRIO A TURMA (TESTE)-->
-  <form action="actionsturma/turmascontroller" method="post">
+  <form action="addturma" method="post">
     userid: <input type="text" name="userid"><br>
     turmaid:<input type="text" name="turmaid"><br>
-<!--     <input type="hidden" name="_csrf" value="<%= _csrf %>"> -->
+    <input type="hidden" name="_csrf" value="<%= _csrf %>">
+    <!--^NECESSARIO PARA EVITAR Forbidden, TAMBÉM PRECISA DE REDIRECIONAMENTO NO CONTROLLER PARA EVITAR BUGS-->
     <input type="submit" value="submit">
   </form>
 </div>
