--- a/views/pages/turmas.ejs
+++ b/views/pages/turmas.ejs
@@ -35,6 +35,15 @@
     <!--^NECESSARIO PARA EVITAR Forbidden, TAMBÉM PRECISA DE REDIRECIONAMENTO NO CONTROLLER PARA EVITAR BUGS-->
     <input type="submit" value="submit">
   </form>
+  <br>
+  <!--REMOVE O USUÁRIO DE TURMA (TESTE)-->
+  <form action="rmturma" method="post">
+    userid: <input type="text" name="userid"><br>
+    turmaid:<input type="text" name="turmaid"><br>
+    <input type="hidden" name="_csrf" value="<%= _csrf %>">
+    <!--^NECESSARIO PARA EVITAR Forbidden, TAMBÉM PRECISA DE REDIRECIONAMENTO NO CONTROLLER PARA EVITAR BUGS-->
+    <input type="submit" value="submit">
+  </form>
 </div>
 <%- /* Expose server-rendered data as window.SAILS_LOCALS :: */ exposeLocalsToBrowser() %>
 
