--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -85,9 +85,9 @@
         </div>
       </div>
       <% } %>
-
+      <div class="col-md-10 offset-md-2">
       <%- body %>
-
+    </div>
       <footer id="page-footer" class="navbar navbar-light justify-content-between flex-row-reverse">
         <div class="nav">
           <small class="nav-item"><a class="nav-link text-info" href="/contact">Contact<span class="d-none d-sm-inline"> us</span></a></small>
