Refazendo dashboard usuario

--- a/assets/styles/pages/homepageusuario.less
+++ b/assets/styles/pages/homepageusuario.less
@@ -1,5 +1,17 @@
 #homepageusuario {
 
   //…
+  .card{
+    text-align: center;
+    width: 180px;
+    .card-header{
+      background-color: lightgrey;
+      font-weight: bold;
+    }
+  }  
+  
+    @media (max-width: 800px) {
+      text-align: center;
+    }
 
 }
