--- a/views/pages/dashboard/welcome.ejs
+++ b/views/pages/dashboard/welcome.ejs
@@ -9,11 +9,11 @@
         
       
     <% } %>
-    <% if(me.perfil=="professor"){ %>
+    <% if(me.perfil=="usuario"){ %>
       
         
       
-    <% } %>
+     <%} %>
   </div>
 </div>
 
