--- a/views/pages/homepageusuario.ejs
+++ b/views/pages/homepageusuario.ejs
@@ -1,4 +1,4 @@
-<div id="homepageusuario" v-cloak class="col-md-10 offset-md-2">
+<div id="homepageusuario" v-cloak>
   <div class="container-fluid">
     <h1>Bem vindo(a), <%= me.fullName %>!</h1>
     <hr/>
@@ -7,17 +7,76 @@
   <!--TURMAS EM QUE O USUÁRIO ESTÁ APARECERIAM AQUI-->
   <div class="container">  
     <div class="row">
-      <div  class="col-md-5">
+      <div  class="col-sm-8">
         <h4 title="Turmas que você participa">Minhas Turmas</h4>      
       </div>
       <!--SE ESTIVER COM O PERFIL DE PROFESSOR, MOSTRA A OPÇÃO DE CRIAR TURMA-->
       <div class="col-sm-2">      
         <a href="#" style="font-size: 13px" title="Criar turma">(+)</a>
-      </div>        
-      <div title="Estatísticas" class="col-sm-5">
-        <h4>Estatísticas</h4>
       </div>
     </div>
+
+    <div class="row">
+      <div class="col-sm-10">
+        <a href="#" style="font-size: 13px;">Ver todas</a> 
+      </div>
+    </div>
+
+    <!--CAROUSEL STARTS HERE-->
+    
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">               
+        <div class="carousel-inner">          
+
+          <div class="carousel-item active">
+            <div class="card m-3">
+              <div class="card-header">Turma 1</div>
+              <div class="card-body">Descrição</div>
+            </div>
+          </div>      
+
+          <div class="carousel-item">
+            <div class="card m-3">
+              <div class="card-header">Turma 2</div>
+              <div class="card-body">Descrição</div>
+            </div>
+          </div>
+                  
+          <div class="carousel-item">
+            <div class="card m-3">
+              <div class="card-header">Turma 3</div>
+              <div class="card-body">Descrição</div>
+            </div>
+          </div>
+          
+        </div>    
+    
+        <!--LEFT/RIGHT CONTROLS-->
+        <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    --------------------------------------------------------------------------
         
     <div class="row">    
       <div class="col-sm-7">
@@ -27,19 +86,40 @@
         <a href="#" style="font-size: 13px;">Ver tudo</a>  
       </div>
     </div>
-    <div class="row">    
-      <div title="Clique para ver detalhes sobre a turma" class="card m-3">
-        <div class="card-header">Nome da turma</div>
-        <div class="card-body">Descrição</div>
-      </div>
-      <div title="Clique para ver detalhes sobre a turma" class="card m-3">
-        <div class="card-header">Nome da turma</div>
-        <div class="card-body">Descrição</div>
-      </div>    
-      <div title="Clique para ver detalhes sobre a turma" class="card m-3">
-        <div class="card-header">Nome da turma</div>
-        <div class="card-body">Descrição</div>
-      </div>    
+    <div class="row">
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="item active">
+						<!--<div title="Clique para ver detalhes sobre a turma" class="card m-3">
+							<div class="card-header">Nome da turma</div>
+							<div class="card-body">Descrição</div>
+						</div>-->
+					</div>
+				</div>
+				<div class="item">
+						<div title="Clique para ver detalhes sobre a turma" class="card m-3">
+							<div class="card-header">Nome da turma</div>
+							<div class="card-body">Descrição</div>
+						</div>
+					
+				</div>
+				<div class="item">
+						<div title="Clique para ver detalhes sobre a turma" class="card m-3">
+							<div class="card-header">Nome da turma</div>
+							<div class="card-body">Descrição</div>
+						</div>
+					
+        </div>
+        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-right"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-left"></span>
+          <span class="sr-only">Next</span>
+        </a>
+
+			</div>
     </div>
             
     <div class="row">
@@ -105,5 +185,4 @@
     </div>
   </div>
 </div>  
-  <%- /* Expose server-rendered data as window.SAILS_LOCALS :: */ exposeLocalsToBrowser() %>
-  
+<%- /* Expose server-rendered data as window.SAILS_LOCALS :: */ exposeLocalsToBrowser() %>
