Refazendo dashboard usuario

--- a/views/pages/homepageusuario.ejs
+++ b/views/pages/homepageusuario.ejs
@@ -10,56 +10,82 @@
       <div  class="col-sm-8">
         <h4 title="Turmas que você participa">Minhas Turmas</h4>      
       </div>
-      <!--SE ESTIVER COM O PERFIL DE PROFESSOR, MOSTRA A OPÇÃO DE CRIAR TURMA-->
-      <div class="col-sm-2">      
-        <a href="#" style="font-size: 13px" title="Criar turma">(+)</a>
-      </div>
     </div>
-
-    <div class="row">
-      <div class="col-sm-10">
-        <a href="#" style="font-size: 13px;">Ver todas</a> 
-      </div>
-    </div>
+    <a href="#" style="font-size: 13px;">Criar turma</a> 
+      
 
     <!--CAROUSEL STARTS HERE-->
-    
-      <div id="myCarousel" class="carousel slide" data-ride="carousel">               
-        <div class="carousel-inner">          
+    <div id="myCarousel" class="carousel slide" data-interval="false">               
+      <div class="carousel-inner row w-100 mx-auto">          
 
-          <div class="carousel-item active">
-            <div class="card m-3">
-              <div class="card-header">Turma 1</div>
-              <div class="card-body">Descrição</div>
-            </div>
-          </div>      
-
-          <div class="carousel-item">
-            <div class="card m-3">
-              <div class="card-header">Turma 2</div>
-              <div class="card-body">Descrição</div>
-            </div>
+        <div class="carousel-item col-sm-3 active">
+          <div class="card m-3">
+            <div class="card-header">Turma 1</div>
+            <div class="card-body">Descrição</div>
           </div>
+        </div>      
+
+        <div class="carousel-item col-sm-3">
+          <div class="card m-3">
+            <div class="card-header">Turma 2</div>
+            <div class="card-body">Descrição</div>
+          </div>
+        </div>
                   
-          <div class="carousel-item">
-            <div class="card m-3">
-              <div class="card-header">Turma 3</div>
-              <div class="card-body">Descrição</div>
-            </div>
+        <div class="carousel-item col-sm-3">
+          <div class="card m-3">
+            <div class="card-header">Turma 3</div>
+            <div class="card-body">Descrição</div>
           </div>
+        </div>
+
+        <div class="carousel-item col-sm-3">
+          <div class="card m-3">
+            <div class="card-header">Turma 4</div>
+            <div class="card-body">Descrição</div>
+          </div>
+        </div>
+
+        <div class="carousel-item col-sm-3">
+          <div class="card m-3">
+            <div class="card-header">Turma 5</div>
+            <div class="card-body">Descrição</div>
+          </div>
+        </div>
+
+        <div class="carousel-item col-sm-3">
+          <div class="card m-3">
+            <div class="card-header">Turma 6</div>
+            <div class="card-body">Descrição</div>
+          </div>
+        </div>
+
+        <div class="carousel-item col-sm-3">
+          <div class="card m-3">
+            <div class="card-header">Turma 7</div>
+            <div class="card-body">Descrição</div>
+          </div>
+        </div>
+
+        <div class="carousel-item col-sm-3">
+          <div class="card m-3">
+            <div class="card-header">Turma 8</div>
+            <div class="card-body">Descrição</div>
+          </div>
+        </div>
           
-        </div>    
+      </div>    
     
-        <!--LEFT/RIGHT CONTROLS-->
-        <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div>
+      <!--LEFT/RIGHT CONTROLS-->
+      <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
     
 
 
