--- a/views/pages/homepageusuario.ejs
+++ b/views/pages/homepageusuario.ejs
@@ -7,7 +7,7 @@
   <!--TURMAS EM QUE O USUÁRIO ESTÁ APARECERIAM AQUI-->
   <div class="container">  
     <div class="row">
-      <div  class="col-sm-8">
+      <div  class="col-sm-10">
         <h4 title="Turmas que você participa">Minhas Turmas</h4>      
       </div>
     </div>
@@ -86,101 +86,70 @@
         <span class="sr-only">Next</span>
       </a>
     </div>
-    
+  </div>    
+   
+  <div class="container">
+    <div class="row">
+      <!--JOGOS QUE O USUARIO SALVOU-->  
+      <div class="col-sm-10">
+        <h4 title="Jogos salvos">Meus jogos</h4>
+      </div>  
+      <!--SE ESTIVER COM O PERFIL DE USUARIO, PODE EDITAR OU REMOVER JOGOS-->
+    </div>
+    <a href="#" style="font-size: 13px;">Ver todos</a>  
+  </div>
+******
+  <div id="myCarousel" class="carousel slide" data-interval="false">               
+    <div class="carousel-inner row w-100 mx-auto">          
 
+      <div class="carousel-item col-sm-3 active">
+        <div class="card m-3">
+          <div class="card-header">Turma 1</div>
+          <div class="card-body">Descrição</div>
+        </div>
+      </div>
 
+      <div class="carousel-item col-sm-3 active">
+        <div class="card m-3">
+          <div class="card-header">Turma 1</div>
+          <div class="card-body">Descrição</div>
+        </div>
+      </div>
 
+      <div class="carousel-item col-sm-3 active">
+        <div class="card m-3">
+          <div class="card-header">Turma 1</div>
+          <div class="card-body">Descrição</div>
+        </div>
+      </div>
 
+      <div class="carousel-item col-sm-3 active">
+        <div class="card m-3">
+          <div class="card-header">Turma 1</div>
+          <div class="card-body">Descrição</div>
+        </div>
+      </div>
 
+      <div class="carousel-item col-sm-3 active">
+        <div class="card m-3">
+          <div class="card-header">Turma 1</div>
+          <div class="card-body">Descrição</div>
+        </div>
+      </div>
 
-
-
-
-
-
-
+      <div class="carousel-item col-sm-3 active">
+        <div class="card m-3">
+          <div class="card-header">Turma 6</div>
+          <div class="card-body">Descrição</div>
+        </div>
+      </div>
+          
+    </div>
 
 
 
     --------------------------------------------------------------------------
-        
-    <div class="row">    
-      <div class="col-sm-7">
-        <a href="#" style="font-size: 13px;">Ver todas</a>  
-      </div>    
-      <div class="col-sm-5">
-        <a href="#" style="font-size: 13px;">Ver tudo</a>  
-      </div>
-    </div>
-    <div class="row">
-      <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="item active">
-						<!--<div title="Clique para ver detalhes sobre a turma" class="card m-3">
-							<div class="card-header">Nome da turma</div>
-							<div class="card-body">Descrição</div>
-						</div>-->
-					</div>
-				</div>
-				<div class="item">
-						<div title="Clique para ver detalhes sobre a turma" class="card m-3">
-							<div class="card-header">Nome da turma</div>
-							<div class="card-body">Descrição</div>
-						</div>
-					
-				</div>
-				<div class="item">
-						<div title="Clique para ver detalhes sobre a turma" class="card m-3">
-							<div class="card-header">Nome da turma</div>
-							<div class="card-body">Descrição</div>
-						</div>
-					
-        </div>
-        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-          <span class="glyphicon glyphicon-chevron-right"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#myCarousel" data-slide="next">
-          <span class="glyphicon glyphicon-chevron-left"></span>
-          <span class="sr-only">Next</span>
-        </a>
 
-			</div>
-    </div>
-            
-    <div class="row">
-      <div title="Clique para ver detalhes sobre a turma" class="card m-3">
-        <div class="card-header">Nome da turma</div>
-        <div class="card-body">Descrição</div>
-      </div>
-      <div title="Clique para ver detalhes sobre a turma" class="card m-3">
-        <div class="card-header">Nome da turma</div>
-        <div class="card-body">Descrição</div>
-      </div>
-      <div title="Clique para ver detalhes sobre a turma" class="card m-3">
-        <div class="card-header">Nome da turma</div>
-        <div class="card-body">Descrição</div>
-      </div>
-    </div> 
-  </div><br><br>
-    
-  <div class="container">
-    <div class="row">
-      <!--JOGOS QUE O USUARIO SALVOU-->  
-      <div title="Jogos salvos" class="col-sm-5">
-        <h4>Meus jogos</h4>
-      </div>  
-      <!--SE ESTIVER COM O PERFIL DE USUARIO, PODE EDITAR OU REMOVER JOGOS-->
-      <div class="col-sm-2">
-        <a href="#" style="font-size: 15px" title="Editar/Remover turmas">(-)</a>
-      </div>      
-    </div>
-    
-    <div class="row">
-      <div class="col-sm-6">
-        <a href="#" style="font-size: 13px;">Ver todos</a>  
-      </div>
-    </div>
     <div class="row">    
       <div title="Clique para ver detalhes sobre o jogo" class="card m-3">
         <div class="card-header">Nome do jogo</div>
